# Open-File-Chain

./: .travis.yml  CMakeLists.txt
Open File Chain/: Open File Chain.cpp  Open File Chain.sln  Open File Chain.vcxproj  Open File Chain.vcxproj.filters
include/: Blockchain.h  TransactionData.h
